icons fixed for dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,12 +3,12 @@
 @tailwind utilities;
 
 html {
-  scroll-behavior: smooth;
+  @apply scroll-smooth
 }
 
 @layer base {
   body {
-    @apply bg-[#ecf0f3] text-[#1f2937] dark:bg-[#0c121c] dark:text-[#ecf0f3] tracking-wide scroll-smooth
+    @apply bg-[#ecf0f3] text-[#1f2937] dark:bg-[#0c121c] dark:text-[#ecf0f3] tracking-wide 
   }
 
   h1, h2, h3, h4, h5, h6 {
